Header Section Home.html

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -19,3 +19,38 @@
   <link rel="stylesheet" href="{% static 'website/css/style.css' %}">
 
 </head>
+
+<body>
+  <!-- Preloader -->
+  <div id="preloader">
+    <div class="preload-content">
+      <div id="dento-load"></div>
+    </div>
+  </div>
+
+  <!-- ***** Header Area Start ***** -->
+  <header class="header-area">
+    <!-- Top Header Area -->
+    <div class="top-header-area">
+      <div class="container h-100">
+        <div class="row h-100 align-items-center">
+          <!-- Top Content -->
+          <div class="col-6 col-md-9 col-lg-8">
+            <div class="top-header-content">
+              <a href="#" data-toggle="tooltip" data-placement="bottom" title="80 Smilescape Street, Glasgow, United Kingdom"><i class="fa fa-map-marker"></i> <span>80 Smilescape Street, Glasgow, United Kingdom</span></a>
+              <a href="#" data-toggle="tooltip" data-placement="bottom" title="info.smilescape@gmail.com"><i class="fa fa-envelope"></i> <span>info.smilescape@gmail.com</span></a>
+            </div>
+          </div>
+          <!-- Top Header Social Info -->
+          <div class="col-6 col-md-3 col-lg-4">
+            <div class="top-header-social-info text-right">
+              <a href="https://www.facebook.com/" data-toggle="tooltip" data-placement="bottom" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
+              <a href="https://twitter.com/" data-toggle="tooltip" data-placement="bottom" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
+              <a href="https://www.linkedin.com/" data-toggle="tooltip" data-placement="bottom" title="Linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>
+              <a href="https://www.pinterest.co.uk/" data-toggle="tooltip" data-placement="bottom" title="Pinterest" target="_blank"><i class="fa fa-pinterest"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Top Header End -->
