Patient Reviews Home.html

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -591,4 +591,57 @@
   </section>
   <!-- ***** Dentist Area End ***** -->
 
-  
+   <!-- ***** Testimonials Area Start ***** -->  
+  <section class="testimonials-area section-padding-100 bg-img bg-gradient-overlay jarallax clearfix" style="background-image: url({% static 'website/img/bg-img/7.jpg' %});">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <!-- Testimonials Slides -->
+          <div class="testimonials-slides owl-carousel">
+            <!-- Single Testimonials Slide -->
+            <div class="single-testimonial-slide d-flex align-items-center">
+              <!-- Thumbnail -->
+              <div class="testimonial-thumb">
+                <img src="{% static 'website/img/bg-img/8.jpg' %}" alt="">
+              </div>
+              <!-- Content -->
+              <div class="testimonial-content">
+                <h5>"Exceptional care, skilled team, advanced technology, preventive focus, and patient-centered approach. A top-notch dental experience!"</h5>
+                <h6>Jacob Thompson</h6>
+                <p>Dental Patient</p>
+              </div>
+            </div>
+
+            <!-- Single Testimonials Slide -->
+            <div class="single-testimonial-slide d-flex align-items-center">
+              <!-- Thumbnail -->
+              <div class="testimonial-thumb">
+                <img src="{% static 'website/img/bg-img/8.jpg' %}" alt="">
+              </div>
+              <!-- Content -->
+              <div class="testimonial-content">
+                <h5>"Outstanding dental practice! Compassionate staff, state-of-the-art facility, personalized care, and a focus on oral health education. Highly recommended!"</h5>
+                <h6>Ethan Williams</h6>
+                <p>Dental Patient</p>
+              </div>
+            </div>
+
+            <!-- Single Testimonials Slide --> 
+            <div class="single-testimonial-slide d-flex align-items-center">
+              <!-- Thumbnail -->
+              <div class="testimonial-thumb">
+                <img src="{% static 'website/img/bg-img/8.jpg' %}" alt="">
+              </div>
+              <!-- Content -->
+              <div class="testimonial-content">
+                <h5>"Absolutely thrilled with my dental experience! The staff was friendly, the facility was modern, and the care was exceptional. Highly satisfied!"</h5>
+                <h6>Nathan Johnson</h6>
+                <p>Dental Patient</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- ***** Testimonials Area End ***** -->
