--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -645,3 +645,75 @@
     </div>
   </section>
   <!-- ***** Testimonials Area End ***** -->
+
+ <!-- ***** Blog Area Start ***** -->
+  <section class="dento-blog-area section-padding-100-0 clearfix">
+    <div class="container">
+      <div class="row">
+        <!-- Section Heading -->
+        <div class="col-12">
+          <div class="section-heading text-center">
+            <h2>Latest News</h2>
+            <div class="line"></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <!-- Single Blog Item --> 
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="single-blog-item mb-100">
+            <a href="./blog-details.html">
+              <img src="{% static 'website/img/bg-img/4.jpg' %}" alt="">
+            </a>
+            <!-- Blog Content -->
+            <div class="blog-content">
+              <a href="./blog-details.html" class="post-title">Groundbreaking Study Reveals Link Between Oral Health and Heart Disease</a>
+              <p>A groundbreaking study conducted by leading researchers uncovers a strong correlation between oral health and heart disease, highlighting the importance of dental care in maintaining overall cardiovascular well-being. This finding revolutionises our understanding of oral-systemic health connections.</p>
+              <div class="post-meta">
+                <a href="#"><i class="icon_clock_alt"></i> 23 Jun 2023</a>
+                <a href="#"><i class="icon_chat_alt"></i> 3 Comments</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Single Blog Item --> 
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="single-blog-item mb-100">
+            <a href="./blog-details.html">
+              <img src="{% static 'website/img/bg-img/5.jpg' %" alt="">
+            </a>
+            <!-- Blog Content -->
+            <div class="blog-content">
+              <a href="./blog-details.html" class="post-title">Innovative Dental Technology Revolutionizes Smile Transformations</a>
+              <p>Cutting-edge dental technology advancements are reshaping smile makeovers, offering faster, more precise treatments with outstanding aesthetic results. From 3D smile simulations to digital smile design, patients now have access to transformative dental solutions like never before.</p>
+              <div class="post-meta">
+                <a href="#"><i class="icon_clock_alt"></i> 23 Jun 2023</a>
+                <a href="#"><i class="icon_chat_alt"></i> 3 Comments</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Single Blog Item --> 
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="single-blog-item mb-100">
+            <a href="./blog-details.html">
+              <img src="{% static 'website/img/bg-img/6.jpg' %}" alt="">
+            </a>
+            <!-- Blog Content -->
+            <div class="blog-content">
+              <a href="./blog-details.html" class="post-title">New Breakthrough in Pain-Free Dentistry: Needle-Free Anesthesia</a>
+              <p>A revolutionary needle-free anesthesia technique is set to transform the dental experience. Using innovative air-pressure technology, patients can now undergo pain-free procedures without the discomfort associated with traditional injections, making dental visits more comfortable than ever.</p>
+              <div class="post-meta">
+                <a href="#"><i class="icon_clock_alt"></i> 22 Jun 2023</a>
+                <a href="#"><i class="icon_chat_alt"></i> 3 Comments</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- ***** Blog Area End ***** -->
