--- a/static/website/css/style.css
+++ b/static/website/css/style.css
@@ -1,11 +1,4 @@
 /* ---------------------------------------------
-[Master Stylesheet]
-
-Template Name: Dento - Dentist & Medical Template
-Template Author: Colorlib
-Version: 1.0.0
-Last Update: Dec 05, 2018
-
 ---------------------------------------------
 [Tables of CSS Content]
 
@@ -52,13 +45,13 @@ Last Update: Dec 05, 2018
 --------------------------------------------- */
 /* Import Fonts & All CSS */
 @import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700");
-@import url(css/bootstrap.min.css);
-@import url(css/animate.css);
-@import url(css/default-assets/classy-nav.css);
-@import url(css/owl.carousel.min.css);
-@import url(css/magnific-popup.css);
-@import url(css/font-awesome.min.css);
-@import url(css/style.css);
+@import url(bootstrap.min.css);
+@import url(animate.css);
+@import url(default-assets/classy-nav.css);
+@import url(owl.carousel.min.css);
+@import url(magnific-popup.css);
+@import url(font-awesome.min.css);
+@import url(style.css);
 * {
   margin: 0;
   padding: 0; }
