--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -726,7 +726,7 @@
         <div class="col-12 col-sm-6 col-lg-4">
           <div class="single-footer-widget">
             <a href="./index.html" class="d-block mb-4"><img src="{% static 'website/img/core-img/logo.png' %}" alt=""></a>
-            <p>Etiam sutor risus, dapibus act elefend katen, lacinia sitamet denim. Mauris sagittis kansa interdum dignissim.</p>
+            <p>Smile, you're working with Smilescape!</p>
             <div class="footer-contact">
               <p><i class="icon_pin"></i> 80 Smilescape Street, Glasgow, United Kingdom</p>
               <p><i class="icon_phone"></i> 0141 549 7214</p>
