--- a/static/website/css/style.css
+++ b/static/website/css/style.css
@@ -1,4 +1,5 @@
 /* ---------------------------------------------
+[Master Stylesheet]
 ---------------------------------------------
 [Tables of CSS Content]
 
@@ -51,7 +52,7 @@
 @import url(owl.carousel.min.css);
 @import url(magnific-popup.css);
 @import url(font-awesome.min.css);
-@import url(style.css);
+@import url(style2.css);
 * {
   margin: 0;
   padding: 0; }
@@ -1525,4 +1526,4 @@ ul {
     height: 110px;
     padding: 15px; }
 
-/*# sourceMappingURL=style.css.map */
+
