Home Page Changes

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -149,7 +149,7 @@
               <!-- Welcome Text -->
               <div class="welcome-text text-center">
                 <h2 data-animation="fadeInDown" data-delay="100ms">We Believe Everyone Should Have Easy Access To Great Dental Care</h2>
-                <p data-animation="fadeInDown" data-delay="300ms">As a leading industry innovator, Dento is opening up exciting new opportunities for dental professionals, investors, employees & suppliers. Contact us to find out what we have to
+                <p data-animation="fadeInDown" data-delay="300ms">Smilescape is opening up exciting new opportunities for dental professionals, investors, employees & suppliers. Contact us to find out what we have to
                   offer you.</p>
                 <div class="welcome-btn-group">
                   <a href="#" class="btn dento-btn mx-2" data-animation="fadeInDown" data-delay="500ms">Get Started</a>
@@ -181,7 +181,7 @@
               <h2>About Us</h2>
               <div class="line"></div>
             </div>
-            <p>While many dental practices prioritize treatment, we believe in the power of prevention. Our primary focus is on preventive dentistry, empowering you to maintain optimal oral health for a lifetime. Through regular check-ups, thorough cleanings, and education, we equip you with the knowledge and tools to prevent dental issues before they arise.</p>
+            <p>"We are a modern dental practice offering comprehensive oral care, advanced treatments, and a friendly, patient-centered approach for healthy smiles!" </p>
 
             <!-- Single Skills Area -->
             <div class="single-skills-area mt-30">
