Video Fix Home Page

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -332,9 +332,10 @@
         <!-- Video Area --> 
         <div class="col-12 col-lg-6">
           <div class="dento-video-area mb-100">
-            <img src="{% static 'website/img/bg-img/14.jpg' %}" alt="">
+            <video controls autoplay muted loop src="{% static 'website/img/core-img/home.mp4' %}" 
+            style="width: 500px; height: 300px;">Your broswer does not support videos</video>
             <!-- Play Button -->
-            <a href="#" class="video-play-button"><i class="fa fa-play" aria-hidden="true"></i></a>
+            
           </div>
         </div>
       </div>
