--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -794,10 +794,10 @@
 
             <!-- Social Info -->
             <div class="footer-social-info">
-              <a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a>
-              <a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a>
-              <a href="#" data-toggle="tooltip" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a>
-              <a href="#" data-toggle="tooltip" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a>
+              <a href="https://www.facebook.com" data-toggle="tooltip" data-placement="top" title="Facebook", target="_blank" ><i class="fa fa-facebook"></i></a>
+              <a href="https://www.twitter.com" data-toggle="tooltip" data-placement="top" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
+              <a href="https://www.linkedin.com" data-toggle="tooltip" data-placement="top" title="Linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>
+              <a href="https://www.pinterest.com" data-toggle="tooltip" data-placement="top" title="Pinterest" target="_blank"><i class="fa fa-pinterest"></i></a>
             </div>
           </div>
         </div>
