--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -37,8 +37,8 @@
           <!-- Top Content -->
           <div class="col-6 col-md-9 col-lg-8">
             <div class="top-header-content">
-              <a href="#" data-toggle="tooltip" data-placement="bottom" title="28 Jackson Street, Chicago, 7788569 USA"><i class="fa fa-map-marker"></i> <span>28 Jackson Street, Chicago, 7788569 USA</span></a>
-              <a href="#" data-toggle="tooltip" data-placement="bottom" title="info.dento@gmail.com"><i class="fa fa-envelope"></i> <span>info.dento@gmail.com</span></a>
+              <a href="#" data-toggle="tooltip" data-placement="bottom" title="80 Smilescape Street, Glasgow, United Kingdom"><i class="fa fa-map-marker"></i> <span>80 Smilescape Street, Glasgow, United Kingdom</span></a>
+              <a href="#" data-toggle="tooltip" data-placement="bottom" title="info.smilescape@gmail.com"><i class="fa fa-envelope"></i> <span>info.smilescape@gmail.com</span></a>
             </div>
           </div>
           <!-- Top Header Social Info -->
@@ -63,7 +63,7 @@
           <nav class="classy-navbar justify-content-between" id="dentoNav">
 
             <!-- Logo --> 
-            <a class="nav-brand" href="index.html"><img src="{% static 'website/img/core-img/logo.png' %}" alt=""></a>
+            <a class="nav-brand" href="{% url 'home' %}"><img src="{% static 'website/img/core-img/logo.png' %}" alt=""></a>
 
             <!-- Navbar Toggler -->
             <div class="classy-navbar-toggler">
