--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -181,7 +181,7 @@
               <h2>About Us</h2>
               <div class="line"></div>
             </div>
-            <p>"We are a modern dental practice offering comprehensive oral care, advanced treatments, and a friendly, patient-centered approach for healthy smiles!" </p>
+            <p>We are a modern dental practice offering comprehensive oral care, advanced treatments, and a friendly, patient-centered approach for healthy smiles! </p>
 
             <!-- Single Skills Area -->
             <div class="single-skills-area mt-30">
