--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -86,7 +86,7 @@
                     <ul class="dropdown">
                       <li><a href="{% url 'home' %}">- Home</a></li>
                       <li><a href="{% url 'about' %}">- About Us</a></li>
-                      <li><a href="service.html">- Service</a></li>
+                      <li><a href="{% url 'service' %}">- Service</a></li>
                       <li><a href="pricing.html">- Pricing</a></li>
                       <li><a href="blog.html">- Blog</a></li>
                       <li><a href="blog-details.html">- Blog Details</a></li>
@@ -94,7 +94,7 @@
                     </ul>
                   </li>
                   <li><a href="{% url 'about' %}">About</a></li>
-                  <li><a href="service.html">Service</a></li>
+                  <li><a href="{% url 'service' %}">Service</a></li>
                   <li><a href="pricing.html">Pricing</a></li>
                   <li><a href="#">Blog</a>
                     <ul class="dropdown">
@@ -685,11 +685,11 @@
         <div class="col-12 col-md-6 col-lg-4">
           <div class="single-blog-item mb-100">
             <a href="./blog-details.html">
-              <img src="{% static 'website/img/bg-img/5.jpg' %" alt="">
+              <img src="{% static 'website/img/bg-img/5.jpg' %}" alt="">
             </a>
             <!-- Blog Content -->
             <div class="blog-content">
-              <a href="./blog-details.html" class="post-title">Innovative Dental Technology Revolutionizes Smile Transformations</a>
+              <a href="./blog-details.html" class="post-title">Innovative Dental Technology Revolutionises Smile Transformations</a>
               <p>Cutting-edge dental technology advancements are reshaping smile makeovers, offering faster, more precise treatments with outstanding aesthetic results. From 3D smile simulations to digital smile design, patients now have access to transformative dental solutions like never before.</p>
               <div class="post-meta">
                 <a href="#"><i class="icon_clock_alt"></i> 23 Jun 2023</a>
@@ -772,7 +772,7 @@
                 <li><a href="#">Advisors</a></li>
                 <li><a href="#">Careers</a></li>
                 <li><a href="#">Dentist</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="{% url 'service' %}">Services</a></li>
                 <li><a href="#">Legals</a></li>
               </ul>
             </nav>
